# openlight

./: CMakeLists.txt  FrameProcessing.cpp  FrameProcessing.hpp  LICENSE  LedStrip.cpp  LedStrip.hpp  README.md  Test.cpp  Test.hpp  main.cpp
